fix(fhir): harden FHIR validation, deadlines and flag-off guard; consolidate FHIR tests
Flag-off and routing
- Add the fhirApiRequestGuard handler interceptor on /api/fhir and /api/fhir/**:
  FHIR handlers answer 404 unless fhir.api.enabled is on and a user is
  authenticated. The fallback controller documents its 501/404 split.

Mapping configuration
- Validator: gender value-map keys must be non-blank, contain no ';' and be
  unique by default-locale case fold (E4027/E5003); codes and systems follow the
  R4 code and uri rules (E4027); field-mapping count, text length, value-map size
  and total text are bounded (E4001); duplicate reports name "another mapping"
  instead of the other mapping's identity.
- Resolution loads metadata with one batched query per class, returns
  unmodifiable entries, and logs ignored mappings with escaped UIDs and their
  error codes. The object-bundle hook reads stored mappings once per bundle and
  compares only mappings with the same uniqueness key.

Search and read
- OR lists are limited to 100 values and 4096 characters, _count to
  2147483646; dates need year 1 or later; tokens accept one '|'.
- Gender search translates through the value map with the validator's key rule.
  Tracker errors never cite echoed filter values, and export messages and
  search values are never logged.
- Read, search and Patient/$everything check the request deadline at each step.
  Event search indexes mappings by stage and pre-filters _id; $everything
  resolves mappings once and carries its self link.
- Mappers keep TIME fractions and millisecond timestamps, parse DATE/AGE values
  fully, drop encounter type codes that are not valid R4 codes, and accept dose
  numbers with leading zeros.
- Document the FHIR JSON responses and search parameters in OpenAPI.

Settings page and build
- The mapping settings page sends the CSRF and X-Requested-With headers,
  times requests out after 30 seconds, counts only an OK web message as success,
  locks the form whi